--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -33,13 +33,11 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    rgb(222, 78, 91),//#488aff,
+  primary:    #488aff,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
-  pink:       rgb(244, 77, 126),
-  red:        rgb(222, 78, 91)
 );
 
 
