--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -21,8 +21,11 @@ $app-direction: ltr;
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
 
+/// @prop - Show the focus highlight when the input has focus
+$text-input-highlight-color-valid:      transparent !default;
 
-
+/// @prop - Show the valid highlight when it is valid and has a value
+$text-input-highlight-color-invalid:      transparent !default;
 
 // Named Color Variables
 // --------------------------------------------------
@@ -33,11 +36,13 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  primary: rgb(244, 70, 57),//#488aff,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
+  pink:       rgb(244, 77, 126),
+  red:        rgb(222, 78, 91)
 );
 
 
