--- a/src/pages/progress/progress.scss
+++ b/src/pages/progress/progress.scss
@@ -1,3 +1,27 @@
 page-progress {
 
+  ion-card .ion-list {
+    height:0 !important;
+  }
+
+  ion-list .list-item-container {
+     max-height: 0px;
+     overflow: hidden;
+   }
+
+  ion-list .list-item-container.active {
+    max-height: 250px;
+    overflow: scroll;
+
+    animation: list-item-container-grow 0.5s ease-in-out;
+  }
+
+  @keyframes list-item-container-grow {
+    0% {
+      max-height: 0;
+    }
+    100% {
+      max-height: 250px;
+    }
+  }
 }
