--- a/src/theme/custom.scss
+++ b/src/theme/custom.scss
@@ -1,3 +1,24 @@
+h1 {
+  font-size: 2.6em !important;
+  color: map-get($colors, 'primary');
+}
+
+h2 {
+  font-size: 2em !important;
+}
+
+h3 {
+  font-size: 1.7em !important;
+}
+
+h4 {
+  font-size: 1.4em !important;
+}
+
+* {
+  font-family: "Avenir Next";
+}
+
 ion-header {
   text-transform: uppercase;
 }
