--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -36,11 +36,11 @@ $text-input-highlight-color-invalid:      transparent !default;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary: rgb(244, 70, 57),//#488aff,
-  secondary:  #32db64,
+  primary:    rgb(244, 70, 57),//#488aff,
+  secondary:  rgb(237, 111, 63),
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222,
+  dark:       rgb(44, 39, 37),
   pink:       rgb(244, 77, 126),
   red:        rgb(222, 78, 91)
 );
