Question page working copy

--- a/src/pages/questions/questions.scss
+++ b/src/pages/questions/questions.scss
@@ -10,13 +10,16 @@ page-questions {
     text-align: center;
   }
 
-  .disable{
+  .enable{
 
   }
 
-  .enable{
+  .disableGood{
+    background-color: green !important
+  }
 
-    
+  .disableFalse{
+    background-color: red !important;
   }
 
 }
