--- a/src/pages/questions/questions.scss
+++ b/src/pages/questions/questions.scss
@@ -10,6 +10,10 @@ page-questions {
     text-align: center;
   }
 
+  .transform_note{
+    text-transform: none!important;
+  }
+
   .enable{
 
   }
