--- a/src/pages/resultat/resultat.scss
+++ b/src/pages/resultat/resultat.scss
@@ -1,3 +1,26 @@
 page-resultat {
 
+  h1.grow {
+    animation: grow 1s ease-in-out;
+    font-size: 2em !important;
+    text-align: center;
+  }
+
+  h2 {
+    font-size: 2em !important;
+  }
+
+  .checkbox-ios.checkbox-disabled {
+    opacity: 1 !important;
+  }
+
+  @keyframes grow {
+    0% {
+      font-size: 0;
+    }
+    100% {
+      font-size: 2em !important;
+    }
+  }
+
 }
