All exercices work worrectly

--- a/src/pages/resultat/resultat.scss
+++ b/src/pages/resultat/resultat.scss
@@ -10,7 +10,7 @@ page-resultat {
     font-size: 2em !important;
   }
 
-  .checkbox-ios.checkbox-disabled {
+  .checkbox-disabled {
     opacity: 1 !important;
   }
 
