Program section is working

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -41,6 +41,7 @@ $colors: (
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       rgb(44, 39, 37),
+  grey:       grey,
   pink:       rgb(244, 77, 126),
   red:        rgb(222, 78, 91)
 );
