Finalizing some details

--- a/src/components/progress-bar/progress-bar.scss
+++ b/src/components/progress-bar/progress-bar.scss
@@ -10,6 +10,7 @@ progress-bar {
     background-color: #f4f4f4;
     border: 1px solid #dcdcdc;
     color: #fff;
+    overflow: hidden;
     border-radius: $progress-border-radius;
   }
 
