Some fixs again...

--- a/src/pages/resultat/resultat.scss
+++ b/src/pages/resultat/resultat.scss
@@ -14,6 +14,13 @@ page-resultat {
     opacity: 1 !important;
   }
 
+  ion-label {
+    opacity: 1 !important;
+    font-size: 1.3em;
+    font-weight: 400 !important;
+  }
+
+
   @keyframes grow {
     0% {
       font-size: 0;
